Remove image from src folder

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,21 +1,21 @@
 /* Roboto font */
-
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500);
-/* material-ui */
 
+/* material-ui */
 @import "~material-ui/src/less/scaffolding";
 @import "~material-ui/src/less/components";
+
 html,
 body {
     font-family: 'Roboto', sans-serif;
-    background: #222222;
+    background: #fff;
 }
-/* main */
 
+/* main */
 .main {
     width: 100%;
     height: 100%;
-    background: #222222;
+    background: #fff;
     color: #fff;
 }
 
@@ -25,8 +25,8 @@ body {
     margin-bottom: 10px;
     text-align: center;
 }
-/* transitions */
 
+/* transitions */
 .fade-enter {
     opacity: 0.01;
     transition: opacity .5s ease-in;
