Add Paper component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -18,3 +18,13 @@ body {
     background: #fff;
     color: #fff;
 }
+
+.boxWrapper {
+    position: relative;
+    text-align: center;
+    overflow: auto;
+    margin: 2%;
+    padding: 1%;
+    width: 20%;
+    height: 50%;
+}
