--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -10,8 +10,8 @@ body {
     font-family: 'Roboto', sans-serif;
     background: #fff;
 }
-
 /* main */
+
 .main {
     width: 100%;
     height: 100%;
@@ -19,12 +19,28 @@ body {
     color: #fff;
 }
 
-.boxWrapper {
-    position: relative;
+.container {
+    display: -webkit-flex;
+    display: flex;
+    border: 1px solid red;
+}
+
+.flex1 {
+    -webkit-flex: 1;
+    flex: 1;
+    border: 1px solid black;
+    min-width: 30%;
+    min-height: 30%;
     text-align: center;
     overflow: auto;
-    margin: 2%;
+    margin: 1%;
     padding: 1%;
-    width: 20%;
-    height: 50%;
+}
+
+.flex2 {
+    -webkit-flex: 3;
+    flex: 3;
+    border: 1px solid black;
+    min-width: 30%;
+    min-height: 30%;
 }
