--- a/src/styles/InformationPanel.less
+++ b/src/styles/InformationPanel.less
@@ -1,3 +1,7 @@
 .InformationPanel {
-    border: 1px dashed #f00;
+    text-align: center;
+    overflow: auto;
+    width: 50%;
+    margin: 3% auto;
+    color: black;
 }
