--- a/src/styles/InformationPanel.less
+++ b/src/styles/InformationPanel.less
@@ -1,7 +1,16 @@
 .InformationPanel {
     text-align: center;
     overflow: auto;
-    width: 50%;
+    width: 90%;
     margin: 3% auto;
     color: black;
+}
+
+.mui-menu-item {
+    text-align: left;
+}
+
+.mui-menu-item-number {
+    color: #004af2;
+    margin-right: 3%;
 }
