--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -12,14 +12,11 @@ body {
 }
 /* main */
 
-.main {
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    color: #fff;
-}
+.main {}
 
 .container {
+    width: 100%;
+    height: 100%;
     display: -webkit-flex;
     display: flex;
 }
