--- a/src/styles/DailyPanel.less
+++ b/src/styles/DailyPanel.less
@@ -1,5 +1,26 @@
+@fontForecastDaily: 1.2em;
+
 .DailyPanel {}
 
 .tab-template-container {
     margin: 1%;
+}
+
+.forecastDailyInfo {
+    font-size: @fontForecastDaily;
+    position: absolute;
+    top: 12%;
+    left: 50%;
+    
+    td {
+        padding-top: 2%;
+    }
+}
+
+.forecastDaily {
+    font-size: @fontForecastDaily;
+    
+    td {
+        padding-top: 2%;
+    }
 }
