--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -24,7 +24,7 @@ body {
 .flex1 {
     -webkit-flex: 1;
     flex: 1;
-    border: 1px solid black;
+    border-right: 2px solid black;
     text-align: center;
     overflow: auto;
     padding: 1%;
@@ -33,7 +33,6 @@ body {
 .flex2 {
     -webkit-flex: 3;
     flex: 3;
-    border: 1px solid black;
 }
 
 .containerGraphs {
@@ -45,13 +44,11 @@ body {
 }
 
 .graphsContent {
-    -webkit-flex: 2;
-    flex: 2;
-    border: 1px solid black;
+    -webkit-flex: 1;
+    flex: 1;
 }
 
 .dailyContent {
-    -webkit-flex: 2;
-    flex: 2;
-    border: 1px solid black;
+    -webkit-flex: 3;
+    flex: 3;
 }
