--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -35,7 +35,7 @@ body {
     flex: 3;
 }
 
-.containerGraphs {
+.containerChart {
     width: 100%;
     height: 100%;
     display: -webkit-flex;
@@ -43,7 +43,7 @@ body {
     flex-direction: column;
 }
 
-.graphsContent {
+.chartContent {
     -webkit-flex: 1;
     flex: 1;
 }
