--- a/src/styles/DailyPanel.less
+++ b/src/styles/DailyPanel.less
@@ -10,7 +10,7 @@
     font-size: @fontForecastDaily;
     position: absolute;
     top: 12%;
-    left: 50%;
+    left: 40%;
     
     td {
         padding-top: 2%;
@@ -18,9 +18,7 @@
 }
 
 .forecastDaily {
-    font-size: @fontForecastDaily;
-    
-    td {
-        padding-top: 2%;
+    p {
+        font-size: @fontForecastDaily;
     }
 }
