Fix response view

--- a/src/styles/DailyPanel.less
+++ b/src/styles/DailyPanel.less
@@ -22,3 +22,7 @@
         font-size: @fontForecastDaily;
     }
 }
+
+.mui-tabs-container .mui-tab-item-container {
+    display: inline-flex !important;
+}
