--- a/src/styles/InformationPanel.less
+++ b/src/styles/InformationPanel.less
@@ -1,8 +1,7 @@
 .InformationPanel {
-    text-align: center;
-    overflow: auto;
-    width: 90%;
-    margin: 3% auto;
+    box-sizing: padding-box;
+    max-width: 90%;
+    margin: 0 auto;
     color: black;
 }
 
