--- a/src/styles/InformationPanel.less
+++ b/src/styles/InformationPanel.less
@@ -1,7 +1,7 @@
 .InformationPanel {
     box-sizing: padding-box;
     max-width: 90%;
-    margin: 0 auto;
+    margin: 1em auto;
     color: black;
 }
 
