--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -34,7 +34,7 @@ body {
     flex: 3;
 }
 
-.containerChart {
+.containerSecondary {
     width: 100%;
     height: 100%;
     display: -webkit-flex;
