--- a/src/styles/mediaQueries.less
+++ b/src/styles/mediaQueries.less
@@ -23,7 +23,7 @@
     }
     .GlobalSummaryPanel {
         width: 27.5em;
-        margin-bottom: 7em;
+        margin-bottom: 8em;
     }
     .flex1 {
         position: relative;
@@ -84,7 +84,68 @@
     }
     .GlobalSummaryPanel {
         width: 29.5em;
-        margin-bottom: 7em;
+        margin-bottom: 8em;
+    }
+    .flex1 {
+        position: relative;
+        top: 1.5em;
+        display: flex;
+        flex: none;
+        flex-direction: column;
+        text-align: center;
+        padding: 1px;
+    }
+    .flex2 {
+        display: flex;
+        flex: none;
+        flex-direction: column-reverse;
+    }
+    .containerSecondary {
+        position: absolute;
+        display: flex;
+        flex: none;
+        left: 0;
+        flex-direction: column-reverse;
+    }
+    .chartContent {
+        position: absolute;
+        bottom: 6em;
+        width: 100%;
+        height: 100%;
+    }
+    .forecastDaily {
+        position: relative;
+        float: left;
+    }
+    .forecastDailyInfo {
+        position: relative;
+        float: left;
+        left: 0;
+    }
+}
+
+// Samsung Galaxy S3
+@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 2) {
+    html {
+        overflow-x: hidden;
+    }
+    .latitude {
+        position: relative;
+        margin-left: 15%;
+    }
+    .longitude {
+        position: relative;
+        margin-top: 2%;
+        margin-left: 5%;
+    }
+    .searchLocationButton {
+        position: absolute;
+        top: 1em;
+        left: 20%;
+    }
+    .GlobalSummaryPanel {
+        width: 28em;
+        margin-bottom: 8em;
     }
     .flex1 {
         position: relative;
